--- a/MultipleRegressionBoxing.ipynb
+++ b/MultipleRegressionBoxing.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bd4bd96a",
+   "metadata": {},
+   "source": [
+    "Overall Comments - M. Schuckers\n",
+    "10 June 2025\n",
+    "\n",
+    "1. Put comments into both Markdown between Python cells and within the Python cells\n",
+    "2. You might want to make a version of the data with just the features/variables that are used in the module or maybe have some extras.\n",
+    "3. I would put all of the markdown and python in a single file rather than having two\n",
+    "4. You'll probably need a discussion about why you're using log purse as the target/response\n",
+    "5. I would put the F-statistic into terms about the p-value rather than the value of the F-statistic\n",
+    "6. Do we want to talk about centering of features?\n",
+    "7. Note that the first residual plot does have some non-constant variability.\n",
+    "8. Why do the test/train split if you're not going to use it\n",
+    "9. In the residual plot that you've given talk more about what randomly scattered means.\n",
+    "10. I would add a task at the end to interpret the estimated coefficients."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "1bab3c2c",
