basics first comments

--- a/Learning the Basics of Pandas in Python Using 2024 MLB Team Batting Data.ipynb
+++ b/Learning the Basics of Pandas in Python Using 2024 MLB Team Batting Data.ipynb
@@ -2,9 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2fb99814",
+   "metadata": {},
+   "source": [
+    "Comments: M. Schuckers \n",
+    "11 June 2025\n",
+    "\n",
+    "1. Add a set of learning goals at the start that are specifically what students should take away from the module\n",
+    "2. 'pip install pandas' did not work for me\n",
+    "3. Add some motivation about why we would read in data.\n",
+    "4. Motivate the use of 'NA' for EXCEL_Batting_Data_2024_NA_version, be clear about why we might want to do that.\n",
+    "5. Add some additional detail about what is a Dataframe at the start of that section\n",
+    "6. Explain what 0-based indexing is\n",
+    "7. Add some depth to the np.nan section.  Explain a bit about missing data\n",
+    "8. When you change to float and you're looking at Dtype's, maybe talk about the consequences of this difference\n",
+    "9. Talk a bit about numpy and what it is useful for\n",
+    "10. Make sure you've got comments for nearly all of your cells."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ececf15d",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
     "---\n",
     "Title: \"Learning the Basics of Pandas in Python Using 2024 MLB Team Batting Data\"\n",
     "\n",
@@ -115,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2fe64017",
    "metadata": {},
    "outputs": [],
@@ -142,13 +164,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5faa575f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2893255739.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    pip3 install pandas\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Download Pandas library\n",
-    "pip install pandas"
+    "pip3 install pandas"
    ]
   },
   {
@@ -188,10 +219,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3bfa76e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting openpyxl\n",
+      "  Downloading openpyxl-3.1.5-py2.py3-none-any.whl.metadata (2.5 kB)\n",
+      "Collecting et-xmlfile (from openpyxl)\n",
+      "  Downloading et_xmlfile-2.0.0-py3-none-any.whl.metadata (2.7 kB)\n",
+      "Downloading openpyxl-3.1.5-py2.py3-none-any.whl (250 kB)\n",
+      "Downloading et_xmlfile-2.0.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: et-xmlfile, openpyxl\n",
+      "Successfully installed et-xmlfile-2.0.0 openpyxl-3.1.5\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "pip install openpyxl"
    ]
@@ -241,10 +297,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3ade74f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        State      Capital\n",
+      "0     Alabama   Montgomery\n",
+      "1      Alaska       Juneau\n",
+      "2     Arizona      Phoenix\n",
+      "3    Arkansas  Little Rock\n",
+      "4  California   Sacramento\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a new DataFrame called df that stores information about States and their capitals\n",
     "df = pd.DataFrame(\n",
@@ -302,10 +371,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c88940cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         State      Capital\n",
+      "row3   Arizona      Phoenix\n",
+      "row4  Arkansas  Little Rock\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a copy our df\n",
     "df_copy = df\n",
@@ -323,15 +402,24 @@
    "id": "f198e968",
    "metadata": {},
    "source": [
-    "We can also apply filtering to our row level operations. For example, lets filter out all rows whose capital is NOT Little Rock."
+    "We can also apply filtering to our row level operations. For example, lets filter and get the rows where the capital is Little Rock.  Note that we have to use `==` to specify the truth of our equality and to distinguish from `=` which assigns values to an object."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b352f282",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         State      Capital\n",
+      "row4  Arkansas  Little Rock\n"
+     ]
+    }
+   ],
    "source": [
     "print(df.loc[df['Capital'] == 'Little Rock'])"
    ]
@@ -341,15 +429,27 @@
    "id": "0e4e6955",
    "metadata": {},
    "source": [
-    "We can also do the reverse and return any rows whose capital is NOT Little Rock."
+    "We can also do the reverse and return any rows whose capital is NOT Little Rock.  Note that we use `!=` for 'not equal to.'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ea514466",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           State     Capital\n",
+      "row0     Alabama  Montgomery\n",
+      "row1      Alaska      Juneau\n",
+      "row3     Arizona     Phoenix\n",
+      "row5  California  Sacramento\n"
+     ]
+    }
+   ],
    "source": [
     "print(df.loc[df['Capital'] != 'Little Rock'])"
    ]
@@ -756,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "bef8358b",
    "metadata": {},
    "outputs": [],
@@ -774,10 +874,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "70180a5e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      State      Capital\n",
+      "0   Alabama   Montgomery\n",
+      "1    Alaska          NaN\n",
+      "2   Arizona      Phoenix\n",
+      "3  Arkansas  Little Rock\n",
+      "4       NaN   Sacramento\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "df1 = pd.DataFrame(\n",
@@ -871,10 +984,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "398284bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3 entries, 0 to 2\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column           Non-Null Count  Dtype \n",
+      "---  ------           --------------  ----- \n",
+      " 0   Player           3 non-null      object\n",
+      " 1   Team             3 non-null      object\n",
+      " 2   Batting_Average  3 non-null      object\n",
+      " 3   Home_Runs        3 non-null      int64 \n",
+      " 4   RBIs             3 non-null      int64 \n",
+      "dtypes: int64(2), object(3)\n",
+      "memory usage: 252.0+ bytes\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# Lets create a new DataFrame with some batting numbers\n",
     "batting_numbers = pd.DataFrame(\n",
@@ -901,10 +1034,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "80536456",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3 entries, 0 to 2\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   Player           3 non-null      object \n",
+      " 1   Team             3 non-null      object \n",
+      " 2   Batting_Average  3 non-null      float64\n",
+      " 3   Home_Runs        3 non-null      int64  \n",
+      " 4   RBIs             3 non-null      int64  \n",
+      "dtypes: float64(1), int64(2), object(2)\n",
+      "memory usage: 252.0+ bytes\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "batting_numbers['Batting_Average'] = batting_numbers['Batting_Average'].astype(float)\n",
     "# Let's check the column type again \n",
@@ -1221,7 +1374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
