updated up to suggestion 3

--- a/Learning the Basics of Pandas in Python Using 2024 MLB Team Batting Data.ipynb
+++ b/Learning the Basics of Pandas in Python Using 2024 MLB Team Batting Data.ipynb
@@ -8,9 +8,9 @@
     "Comments: M. Schuckers \n",
     "11 June 2025\n",
     "\n",
-    "1. Add a set of learning goals at the start that are specifically what students should take away from the module\n",
-    "2. 'pip install pandas' did not work for me\n",
-    "3. Add some motivation about why we would read in data.\n",
+    "1. Add a set of learning goals at the start that are specifically what students should take away from the module - done\n",
+    "2. 'pip install pandas' did not work for me - Still solving \n",
+    "3. Add some motivation about why we would read in data. - done\n",
     "4. Motivate the use of 'NA' for EXCEL_Batting_Data_2024_NA_version, be clear about why we might want to do that.\n",
     "5. Add some additional detail about what is a Dataframe at the start of that section\n",
     "6. Explain what 0-based indexing is\n",
@@ -99,6 +99,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c290c73e",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "# Learning Goals\n",
+    "\n",
+    "\n",
+    "- Use Pandas for importing data from CSV and Excel Files\n",
+    "- Creation your own Dataframe using Python Dictionaries\n",
+    "- Data selection of rows and columns with loc and iloc\n",
+    "- Data Filtering with conditionals\n",
+    "- How to calculate key statisitics \n",
+    "- Handling null data \n",
+    "- Changing data types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6a207659",
    "metadata": {},
    "source": [
@@ -164,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5faa575f",
    "metadata": {},
    "outputs": [
@@ -179,7 +198,7 @@
    ],
    "source": [
     "# Download Pandas library\n",
-    "pip3 install pandas"
+    "pip install pandas"
    ]
   },
   {
@@ -188,6 +207,8 @@
    "metadata": {},
    "source": [
     "# Importing / Reading In Data:\n",
+    "\n",
+    "Importing data into Python allows us to turn raw numbers into powerful insights with a few lines of Python. Learning to read data into Python isn’t just a skill; it’s the key to becoming a data scientist or a data analyst!\n",
     "\n",
     "We can read in several different file types using the Pandas library. This can include CSV files, Excel files (XLSX), HTML files, JSON files, etc. Doing this will automatically read in the data as a dataframe which is essentially the Python version of an Excel spreadsheet for organizing data. We wil talk about this later on in the module.\n",
     "\n",
