--- a/Learning the Basics of Pandas in Python Using 2024 MLB Team Batting Data.ipynb
+++ b/Learning the Basics of Pandas in Python Using 2024 MLB Team Batting Data.ipynb
@@ -11,9 +11,9 @@
     "1. Add a set of learning goals at the start that are specifically what students should take away from the module - done\n",
     "2. 'pip install pandas' did not work for me - Still solving \n",
     "3. Add some motivation about why we would read in data. - done\n",
-    "4. Motivate the use of 'NA' for EXCEL_Batting_Data_2024_NA_version, be clear about why we might want to do that.\n",
-    "5. Add some additional detail about what is a Dataframe at the start of that section\n",
-    "6. Explain what 0-based indexing is\n",
+    "4. Motivate the use of 'NA' for EXCEL_Batting_Data_2024_NA_version, be clear about why we might want to do that. - done\n",
+    "5. Add some additional detail about what is a Dataframe at the start of that section - done\n",
+    "6. Explain what 0-based indexing is - done\n",
     "7. Add some depth to the np.nan section.  Explain a bit about missing data\n",
     "8. When you change to float and you're looking at Dtype's, maybe talk about the consequences of this difference\n",
     "9. Talk a bit about numpy and what it is useful for\n",
@@ -183,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5faa575f",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (2893255739.py, line 2)",
+     "evalue": "invalid syntax (2045187497.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    pip3 install pandas\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mpip install pandas\u001b[39m\n        ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
    "source": [
     "# Importing / Reading In Data:\n",
     "\n",
-    "Importing data into Python allows us to turn raw numbers into powerful insights with a few lines of Python. Learning to read data into Python isn’t just a skill; it’s the key to becoming a data scientist or a data analyst!\n",
+    "Importing data into Python allows us to turn raw numbers into powerful insights with a few lines of Python. Learning to read data into Python isn’t just a skill; it’s the key to becoming a data scientist or a data analyst.\n",
     "\n",
     "We can read in several different file types using the Pandas library. This can include CSV files, Excel files (XLSX), HTML files, JSON files, etc. Doing this will automatically read in the data as a dataframe which is essentially the Python version of an Excel spreadsheet for organizing data. We wil talk about this later on in the module.\n",
     "\n",
@@ -289,7 +289,9 @@
    "id": "5dd4782e",
    "metadata": {},
    "source": [
-    "We can also automatically register anything we want as an NA value within the dataset during our import statement. Here's an example:"
+    "If we wanted to import data and automatically replace any null values with a value of our choosing, we need to add on an extra argument in our read statement. We may want to do this because it becomes easier to locate null values. Without doing this step, null values will just show up as blanks and cause problems down the road. In a bigger dataset, it may become easier to find null values after implementing this step and using a function to find them by the value entered. \n",
+    "\n",
+    "Here's an example:"
    ]
   },
   {
@@ -309,7 +311,7 @@
    "source": [
     "# Dataframes and Basic Data Selection:\n",
     "\n",
-    "As discussed earlier, Dataframes are a convenient way of organizing data in python using pandas. Dataframes are essential to python and allow you to do many different thing to the data including data cleaning, adding/deleting columns and rows, data entry, data manipulation, etc. \n",
+    "As discussed earlier, Dataframes are a convenient way of organizing data in python using pandas. Dataframes are a lot like an excel spreadsheet; it is a way of organizing data into rows and columns with Python. Each column can hold different data types and the size of the dataframe is mutable through the removal of rows and columns. Dataframes are essential to python and allow you to do many different thing to the data including data cleaning, adding/deleting columns and rows, data entry, data manipulation, etc. \n",
     "\n",
     "Lets take a look at how to create our own dataframe. \n",
     "\n",
@@ -369,7 +371,33 @@
    "id": "db27bc42",
    "metadata": {},
    "source": [
-    "NOTE: Columns and rows in dataframes use 0-based indexing"
+    "NOTE: Columns and rows in dataframes use 0-based indexing.\n",
+    "\n",
+    "This Means that the first item in a Python list start with the index 0 and not 1. For example, if I want to get the very first item in a list I would do this: list[0]. \n",
+    "\n",
+    "Here is code example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bdff3550",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list = [1,2,3,4,5,6,7,8,9,10]\n",
+    "list[0]"
    ]
   },
   {
@@ -1395,7 +1423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
