Finished first revision

--- a/Learning the Basics of Pandas in Python Using 2024 MLB Team Batting Data.ipynb
+++ b/Learning the Basics of Pandas in Python Using 2024 MLB Team Batting Data.ipynb
@@ -9,15 +9,15 @@
     "11 June 2025\n",
     "\n",
     "1. Add a set of learning goals at the start that are specifically what students should take away from the module - done\n",
-    "2. 'pip install pandas' did not work for me - Still solving \n",
+    "2. 'pip install pandas' did not work for me - linked to a resource\n",
     "3. Add some motivation about why we would read in data. - done\n",
     "4. Motivate the use of 'NA' for EXCEL_Batting_Data_2024_NA_version, be clear about why we might want to do that. - done\n",
     "5. Add some additional detail about what is a Dataframe at the start of that section - done\n",
     "6. Explain what 0-based indexing is - done\n",
-    "7. Add some depth to the np.nan section.  Explain a bit about missing data\n",
-    "8. When you change to float and you're looking at Dtype's, maybe talk about the consequences of this difference\n",
-    "9. Talk a bit about numpy and what it is useful for\n",
-    "10. Make sure you've got comments for nearly all of your cells."
+    "7. Add some depth to the np.nan section.  Explain a bit about missing data - done\n",
+    "8. When you change to float and you're looking at Dtype's, maybe talk about the consequences of this difference - done\n",
+    "9. Talk a bit about numpy and what it is useful for - done.\n",
+    "10. Make sure you've got comments for nearly all of your cells. - done"
    ]
   },
   {
@@ -178,27 +178,9 @@
    "id": "edd74a29",
    "metadata": {},
    "source": [
-    "If that code did not run, you may need to download Pandas onto your Computer. This can be done by running the following code:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "5faa575f",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2045187497.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mpip install pandas\u001b[39m\n        ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Download Pandas library\n",
-    "pip install pandas"
+    "If that code did not run, you may need to download Pandas onto your Computer. \n",
+    "\n",
+    "Here is a resource for learning how to download Pandas: https://pandas.pydata.org/docs/getting_started/install.html "
    ]
   },
   {
@@ -235,42 +217,9 @@
    "source": [
     "In order to Read an Excel file in Python you may need to download \"openpyxl\". \n",
     "\n",
-    "This can be done by running the following code:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "3bfa76e1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting openpyxl\n",
-      "  Downloading openpyxl-3.1.5-py2.py3-none-any.whl.metadata (2.5 kB)\n",
-      "Collecting et-xmlfile (from openpyxl)\n",
-      "  Downloading et_xmlfile-2.0.0-py3-none-any.whl.metadata (2.7 kB)\n",
-      "Downloading openpyxl-3.1.5-py2.py3-none-any.whl (250 kB)\n",
-      "Downloading et_xmlfile-2.0.0-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: et-xmlfile, openpyxl\n",
-      "Successfully installed et-xmlfile-2.0.0 openpyxl-3.1.5\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install openpyxl"
+    "Here is a resource to learn about downloading it: https://openpyxl.readthedocs.io/en/stable/tutorial.html\n",
+    "\n",
+    "Although the documentation states to include a \"$\" in the import statement, it may not be neccesary."
    ]
   },
   {
@@ -289,9 +238,9 @@
    "id": "5dd4782e",
    "metadata": {},
    "source": [
-    "If we wanted to import data and automatically replace any null values with a value of our choosing, we need to add on an extra argument in our read statement. We may want to do this because it becomes easier to locate null values. Without doing this step, null values will just show up as blanks and cause problems down the road. In a bigger dataset, it may become easier to find null values after implementing this step and using a function to find them by the value entered. \n",
+    "Certain datasets may contain missing values that are represented by a stand-in value. For example, a dataset may have missing values that are labeled as 'NA' but we want them to be recognized as true missing values without a string representation. \n",
     "\n",
-    "Here's an example:"
+    "Following this example, we can register them as missing values with the code below:"
    ]
   },
   {
@@ -301,7 +250,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read in Baseball Data Excel file as a DataFrame and treat all instances of 'NA' as a missing values\n",
     "EXCEL_Batting_Data_2024_NA_version = pd.read_excel('https://raw.githubusercontent.com/ahaze65/Data-For-Pandas-Module/main/2024_MLB_Team_Batting_Data_Excel_Version.xlsx', na_values=['NA'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cf6bb82",
+   "metadata": {},
+   "source": [
+    "By doing this, we can tell Python what values we want to be treated as missing values."
    ]
   },
   {
@@ -380,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "bdff3550",
    "metadata": {},
    "outputs": [
@@ -396,7 +354,10 @@
     }
    ],
    "source": [
+    "# Create a list\n",
     "list = [1,2,3,4,5,6,7,8,9,10]\n",
+    "\n",
+    "# Get the first element of the list\n",
     "list[0]"
    ]
   },
@@ -456,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b352f282",
    "metadata": {},
    "outputs": [
@@ -470,6 +431,7 @@
     }
    ],
    "source": [
+    "# Print the row(s) where the Capital is 'Little Rock'\n",
     "print(df.loc[df['Capital'] == 'Little Rock'])"
    ]
   },
@@ -483,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ea514466",
    "metadata": {},
    "outputs": [
@@ -500,6 +462,7 @@
     }
    ],
    "source": [
+    "# Print the row(s) where the Capital is not 'Little Rock'\n",
     "print(df.loc[df['Capital'] != 'Little Rock'])"
    ]
   },
@@ -714,6 +677,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Describe the DataFrame with key statistics\n",
     "CSV_Batting_Data_2024.describe()"
    ]
   },
@@ -843,8 +807,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Drop the first row of the DataFrame\n",
     "copy_dataset.drop(0, inplace=True)\n",
     "\n",
+    "# Get first 5 rows of the DataFrame after dropping the first row\n",
     "copy_dataset.head()"
    ]
   },
@@ -873,7 +839,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Drop the last two rows of the DataFrame\n",
     "CSV_Batting_Data_2024.drop([30,31], inplace=True)\n",
+    "\n",
+    "# Get the last 5 rows of the DataFrame after dropping the last two rows\n",
     "CSV_Batting_Data_2024.tail()"
    ]
   },
@@ -905,25 +874,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "bef8358b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import Numpy library\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "18ad4336",
+   "id": "002109d8",
    "metadata": {},
    "source": [
-    "Do a pip install like earlier if you need to download it."
+    "Numpy is another python library that is used for mathematical computation using arrays. It has a very useful function called .nan. It stands for \"Not a Number\" and allows us to label an entry as a NULL value. This may be useful for missing data and labeling it with an \"NaN\". Missing data can be hard to handle at times, and sometimes labeling it as missing may be the best possible answer depending on the situation.\n",
+    "\n",
+    "If the Numpy import does not work, you may need to download it. Here is a resource to help: https://numpy.org/install/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "70180a5e",
    "metadata": {},
    "outputs": [
@@ -941,7 +913,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# Create a DataFrame with missing values\n",
     "df1 = pd.DataFrame(\n",
     "    {\n",
     "    'State': ['Alabama', 'Alaska', 'Arizona', 'Arkansas', np.nan],\n",
@@ -949,7 +921,7 @@
     "    }\n",
     ")\n",
     "\n",
-    "\n",
+    "# Print the DataFrame with missing values\n",
     "print(df1)"
    ]
   },
@@ -968,7 +940,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Drop rows with any missing values\n",
     "df1.dropna(inplace=True)\n",
+    "\n",
+    "# Print out the resulting DataFrame after dropping rows with missing values\n",
     "print(df1)"
    ]
   },
@@ -999,6 +974,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a DataFrame with missing values\n",
     "df1 = pd.DataFrame(\n",
     "    {\n",
     "    'State': ['Alabama', 'Alaska', 'Arizona', 'Arkansas', np.nan],\n",
@@ -1009,6 +985,7 @@
     "# Lets fill those missing values with 'empty!'\n",
     "df1.fillna('empty!', inplace=True)\n",
     "\n",
+    "# Print out the resulting DataFrame after filling missing values\n",
     "print(df1)"
    ]
   },
@@ -1083,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "80536456",
    "metadata": {},
    "outputs": [
@@ -1108,9 +1085,22 @@
     }
    ],
    "source": [
+    "# Convert the 'Batting_Average' column to the float type\n",
     "batting_numbers['Batting_Average'] = batting_numbers['Batting_Average'].astype(float)\n",
+    "\n",
     "# Let's check the column type again \n",
     "print(batting_numbers.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11b06d8b",
+   "metadata": {},
+   "source": [
+    "There are a few reasons why we may want to change a column's data type to something else:\n",
+    "\n",
+    "- Ensures Data is properly represented with correct formatting\n",
+    "- Helps prevent errors during calculation and analysis (such as trying to divide a number by a string)"
    ]
   },
   {
@@ -1148,16 +1138,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Print the average number of Strikeouts (SO) for a team during the 2024 MLB season\n",
     "print(f'Mean: {CSV_Batting_Data_2024['SO'].mean()}')\n",
     "\n",
+    "# Print the median number of Strikeouts (SO) for a team during the 2024 MLB season\n",
     "print(f'Median: {CSV_Batting_Data_2024['SO'].median()}')\n",
     "\n",
+    "# Print the most commonly occuring number of Strikeouts (SO) among teams during the 2024 MLB season\n",
     "print(f'Mode: {CSV_Batting_Data_2024[\"SO\"].mode()}')\n",
     "\n",
+    "# Print the highest amount of Strikeouts (SO) a team had during the 2024 MLB season\n",
     "print(f'Maximum: {CSV_Batting_Data_2024[\"SO\"].max()}')\n",
     "\n",
+    "# Print the lowest amount of Strikeouts (SO) a team had during the 2024 MLB season\n",
     "print(f'Minimum: {CSV_Batting_Data_2024[\"SO\"].min()}')\n",
     "\n",
+    "# Print the standard deviation of team Strikeouts (SO) during the 2024 MLB season\n",
     "print(f'Standard Deviation: {CSV_Batting_Data_2024[\"SO\"].std()}')\n"
    ]
   },
@@ -1180,6 +1176,8 @@
     "\n",
     "Lastly, lets go over how to convert a dataframe column to a numpy array for easier calculations.\n",
     "\n",
+    "As discussed earlier in this module, the Numpy library is a powerful python library that is used for mathematical computation using arrays. This can be extremely useful with topics such as matrices and linear algebra. However, we just want to learn how to establish a dataframe column into a Numpy Array for this lesson.\n",
+    "\n",
     "\n",
     "Lets start by recreating our custom dataframe from earlier."
    ]
@@ -1191,6 +1189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a new DataFrame with some batting numbers\n",
     "batting_numbers2 = pd.DataFrame(\n",
     "    {\n",
     "        'Player': ['Bryce Harper', 'Andrew McCutchen', 'Buster Posey'],\n",
@@ -1217,8 +1216,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Convert the 'Home_runs' column to a numpy array\n",
     "HR_array = batting_numbers2['Home_Runs'].to_numpy()\n",
+    "\n",
+    "# Print it out\n",
     "print(HR_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2e0e250",
+   "metadata": {},
+   "source": [
+    "See, very simple and easy! This will now allow you to do Numpy computation on the 'Home_Runs' column if you want."
    ]
   },
   {
