Updated version of first revision of the notebook

--- a/Learning the Basics of Pandas in Python Using 2024 MLB Team Batting Data.ipynb
+++ b/Learning the Basics of Pandas in Python Using 2024 MLB Team Batting Data.ipynb
@@ -104,7 +104,7 @@
    "source": [
     "---\n",
     "\n",
-    "# Learning Goals\n",
+    "# Learning Goals:\n",
     "\n",
     "\n",
     "- Use Pandas for importing data from CSV and Excel Files\n",
