--- a/Modules/Pandas Module by Austin Hayes/Learning the Basics of Pandas in Python Using 2024 MLB Team Batting Data.ipynb
+++ b/Modules/Pandas Module by Austin Hayes/Learning the Basics of Pandas in Python Using 2024 MLB Team Batting Data.ipynb
@@ -321,7 +321,7 @@
     "\n",
     "\n",
     "\n",
-    "Now Lets try printing out a specific row number and column from the dataframe we just made."
+    "Now lets try printing out a specific row number and column from the dataframe we just made."
    ]
   },
   {
@@ -330,8 +330,7 @@
    "metadata": {},
    "source": [
     "NOTE: Columns and rows in dataframes use 0-based indexing.\n",
-    "\n",
-    "This Means that the first item in a Python list start with the index 0 and not 1. For example, if I want to get the very first item in a list I would do this: list[0]. \n",
+    "This means that the first item in a Python list start with the index 0 and not 1. For example, if I want to get the very first item in a list I would do this: list[0]. \n",
     "\n",
     "Here is code example:"
    ]
@@ -358,7 +357,10 @@
     "list = [1,2,3,4,5,6,7,8,9,10]\n",
     "\n",
     "# Get the first element of the list\n",
-    "list[0]"
+    "list[0]\n",
+    "\n",
+    "# Get the fourth element of list\n",
+    "list[3]"
    ]
   },
   {
